<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item
        android:icon="@drawable/ic_nav_subwise"
        android:id="@+id/player"
        android:title="@string/main_bottom_nav_subwise"/>
    <item
        android:icon="@drawable/ic_nav_collections"
        android:id="@+id/bmark"
        android:title="@string/main_bottom_nav_bmark"/>
    <item
        android:icon="@drawable/ic_nav_book_open"
        android:id="@+id/home"
        android:title="@string/main_bottom_nav_home"/>
    <item
        android:icon="@drawable/ic_nav_fav"
        android:id="@+id/fav"
        android:title="বিবিধ"/>
    <item
        android:icon="@drawable/ic_baseline_map_24"
        android:id="@+id/settings"
        android:title="মানচিত্র"/>
</menu>
